Add book type options

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
             <option value="fiction">นวนิยาย</option>
             <option value="science">วิทยาศาสตร์</option>
             <option value="history">ประวัติศาสตร์</option>
+            <option value="math">คณิตศาสตร์</option>
+            <option value="language">ภาษาต่างๆ</option>
             <option value="other">อื่น ๆ</option>
         </select>
         
